--- a/config/config_gpm_mcs_saag_cu2_2010_2011.yml
+++ b/config/config_gpm_mcs_saag_cu2_2010_2011.yml
@@ -5,8 +5,8 @@
 # Processing steps:
 # Maybe worth nesting these in sets of dictionaries
 run_idfeature : False
-run_tracksingle : True
-run_gettracks : True
+run_tracksingle : False
+run_gettracks : False
 run_trackstats : True
 run_identifymcs : True
 run_matchpf : True
@@ -159,8 +159,8 @@ fillval: -9999
 # MCS track stats file base names
 mcstbstats_filebase: 'mcs_tracks_'
 mcspfstats_filebase: 'mcs_tracks_pf_'
-# mcsrobust_filebase: 'mcs_tracks_robust_'
-mcsrobust_filebase: 'mcs_tracks_final_extc_'
+mcsrobust_filebase: 'mcs_tracks_robust_'
+# mcsrobust_filebase: 'mcs_tracks_final_extc_'
 pixeltracking_filebase: 'mcstrack_'
 mcsfinal_filebase: 'mcs_tracks_final_'
 
