--- a/config/config_gpm_mcs_saag_cu2_2018-2019.yml
+++ b/config/config_gpm_mcs_saag_cu2_2018-2019.yml
@@ -5,8 +5,8 @@
 # Processing steps:
 # Maybe worth nesting these in sets of dictionaries
 run_idfeature : False
-run_tracksingle : True
-run_gettracks : True
+run_tracksingle : False
+run_gettracks : False
 run_trackstats : True
 run_identifymcs : True
 run_matchpf : True
