Added new cell tracking workflow for LASSO LES simulations.
1. Added regrid_lasso_reflectivity.py to coarsen the LASSO 100m domain 3D reflectivity (from LASSO subset files on HAMSL vertical grid) to 500m grid spacing.
2. Added regrid_celltracking_mask.py to regard 500m pixel-level cell tracking masks back to the original 100m grid.
3. Added a new run script (run_celltracking_lasso.py) for the new workflow.
4. Added a shell script (make_lasso_config_slurm_scripts_cu2.sh) to generate config and slurm scripts to track multiple LASSO runs.

--- a/config/config_lasso_wrf100m_regrid500m.yml
+++ b/config/config_lasso_wrf100m_regrid500m.yml
@@ -1,6 +1,8 @@
 ---
 # LASSO WRF simulated radar cell tracking configuration file
 
+# Regrid input reflectivity
+run_regridreflectivity: True
 # Identify features to track
 run_idfeature: True
 # Tracking steps to run
@@ -13,6 +15,8 @@ run_gettracks: True
 run_trackstats: True
 # Map tracking to pixel files
 run_mapfeature: True
+# Regrid pixel files to original grid
+run_regridmask: True
 
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
@@ -24,12 +28,17 @@ timeout: 360  # [seconds] Dask timeout limit
 # Start/end date and time
 startdate: '20181204.1200'
 enddate: '20181205.0000'
+# Ensemble member name
+ensmember: 'gefs18'
+# Time frequency of input used for tracking (e.g., '5min', '15min')
+sample_time_freq: '5min'
 
 # Specify tracking input data date/time string format
 # This is the preprocessed file that contains Tb & rainrate
 # E.g., databasename20181101.011503.nc --> yyyymodd.hhmmss
 # E.g., databasename2018-11-01_01:15:00 --> yyyy-mo-dd_hh:mm:ss
 time_format: 'yyyymodd??_?hhmmss'
+raw_databasename: 'corlasso_sub_cloudOnHamsl.M1.m1.'
 databasename: 'reg_refl_'
 
 # Input files directory
