Fixed boundary issues in SL3D code.
1. In sl3d_func.py, SL3D near the domain boundary within the background_box are now set to 0 before returning the results. These grids are problematic because median_filter and uniform_filter near the edge are not well defined.
2. In run_sl3d.py, added reorder of the data dimension using dimension names from the config file after reading in the netCDF file. This makes the code more flexible to work with data written in different dimension orders.

--- a/config/config_wrf_mcs_hyperfacets_ctl.yml
+++ b/config/config_wrf_mcs_hyperfacets_ctl.yml
@@ -94,6 +94,7 @@ updraft_ReflGradiant_MaxHeight:  7.0
 updraft_CompRefl_Thresh:  40.0
 # Number of vertical level gaps allowed in calculating echo-top height
 echotop_gap: 1
+t_dimname: 'time'
 x_dimname: 'lon'
 y_dimname: 'lat'
 z_dimname: 'level'
