--- a/config/config_radar500m_example.yml
+++ b/config/config_radar500m_example.yml
@@ -4,20 +4,20 @@
 # Identify features to track
 run_idfeature: True
 # Tracking steps to run
-run_advection: False
+run_advection: True
 # Track single consecutive feature files
-run_tracksingle: False
+run_tracksingle: True
 # Run tracking for all files
-run_gettracks: False
+run_gettracks: True
 # Calculate feature statistics
-run_trackstats: False
+run_trackstats: True
 # Map tracking to pixel files
-run_mapfeature: False
+run_mapfeature: True
 
 # Parallel processing set up
 # run_parallel: 1 (local cluster), 2 (Dask MPI)
-run_parallel: 0
-nprocesses: 32  # Number of processors to use if run_parallel=1
+run_parallel: 1
+nprocesses: 12  # Number of processors to use if run_parallel=1
 dask_tmp_dir: '/tmp'  # Dask temporary directory if run_parallel=1
 timeout: 360  # [seconds] Dask timeout limit
 
@@ -79,6 +79,8 @@ conv_rad_increment: 0.5
 conv_rad_start: 1.0
 # Background reflectivity step-function increment [dB]
 bkg_refl_increment: 5
+# Convolution method to calculate background reflectivity: 'ndimage' (default), 'signal' (FFT)
+convolve_method: 'ndimage'
 # Maximum convective radius dilation [km]
 maxConvRadius: 5
 # Define a set of radii for final step of convective cell expansion [km]
@@ -115,7 +117,7 @@ lon_varname: 'point_longitude'
 lat_varname: 'point_latitude'
 reflectivity_varname: 'taranis_attenuation_corrected_reflectivity'
 # Input data source: 'radar', 'wrf', 'wrf_regrid'
-input_source: 'radar'
+input_source: 'csapr_cacti'
 
 # Specify data structure
 datatimeresolution: 0.25     # hours
